--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
   <div class="about">
     
   
-    <div class="avatar"><img src="/images/IMG_5888.HEIC" alt="avatar"></div>
+    <div class="avatar"><img src="/images/IMG_5888.jpg" alt="avatar"></div>
   
 
 
