--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -182,7 +182,8 @@
 </h3>
 <ul>
 <li>Developed machine learning algorithms such as <strong>Linear Regression</strong>, <strong>LDA</strong>, <strong>QDA</strong>, and <strong>SVM</strong> for multi-class classification of predicting occupancy using <strong>NumPy</strong>, <strong>Pandas</strong>, and <strong>Scipy</strong>.</li>
-<li>Applied techniques such as square root, cube root, and logarithmic transformations to ensure data followed a normal distribution, optimizing model results.</li>
+<li>Applied techniques such as square root, cube root, logarithmic transformations to ensure data follows normal distribution
+and leveraged SMOTE to generate synthetic data and achieve a balanced dataset across all classes.</li>
 </ul>
 <h3 id="health-centre-database-and-datawarehouse-for-analysis">
   Health Centre Database and Datawarehouse for Analysis
