--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -230,6 +230,8 @@ Jun 2023 – Nov 2023</p>
 Jul 2019 - Sep 2022</p>
 <ul>
 <li>Developed bots to automate data collection, transformation, and creation of custom dashboards, ensuring constant and real-time updates of data, decreasing turnaround time by 75% using tools such as Automation Anywhere, Python, MySQL, Tableau, Power BI, and Excel Power Pivots.</li>
+<li>Deployed Naïve Bayes model on partner devices to estimate the likelihood of a candidate’s fit for a role. This estimation was
+based on historical data from partners&rsquo; recruitments, serving as an enhancement to our LinkedIn candidate Bot.</li>
 <li>Used OCR to capture invoices generated and received in real-time, automating financial analysis report generation daily, thereby eliminating dependency.</li>
 </ul>
 <p><strong>Data Engineer</strong><br>
@@ -259,7 +261,8 @@ Jun 2024</p>
 Apr 2024</p>
 <ul>
 <li>Developed machine learning algorithms such as <strong>Linear Regression</strong>, <strong>LDA</strong>, <strong>QDA</strong>, and <strong>SVM</strong> for multi-class classification of predicting occupancy using <strong>NumPy</strong>, <strong>Pandas</strong>, and <strong>Scipy</strong>.</li>
-<li>Applied techniques such as square root, cube root, and logarithmic transformations to ensure data followed a normal distribution, optimizing model results.</li>
+<li>Applied techniques such as square root, cube root, logarithmic transformations to ensure data follows normal distribution
+and leveraged SMOTE to generate synthetic data and achieve a balanced dataset across all classes.</li>
 </ul>
 <p><strong>Health Centre Database and Datawarehouse for Analysis</strong><br>
 Apr 2024</p>
