--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -245,7 +245,7 @@ GPA: 3.9/4.0</p>
 </ul>
 <p><strong>Bachelor of Science in Information Science</strong><br>
 Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka<br>
-Graduation: June 2024<br>
+Graduation: June 2018
 GPA: 3.46/4.0</p>
 <p><strong>Relevant Coursework:</strong></p>
 <ul>
