--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -162,9 +162,11 @@ model built with the HIV team achieving an accuracy of 65%.</li>
 <strong>Acronotics</strong>, Bengaluru, India<br>
 Jul 2019 - Sep 2022</p>
 <ul>
-<li>Cut recruitment time by 40% through shortlisting candidates using Gaussian Process Regression based on historical partner data.</li>
-<li>Spearheaded a team of engineers as the Solution architect for augmenting features like auto-ticket assignment, auto- rescheduling into RadiumAi, a tool to monitor RPA process across platforms.</li>
-<li>Used OCR to capture invoices generated and received in real-time, automating financial analysis report generation daily, thereby eliminating dependency.</li>
+<li>Cut recruitment time by 40% through shortlisting candidates using Gaussian Process Regression based on partner data.</li>
+<li>Improved user experience by leading a team of engineers as the Solution architect and augmenting features like auto-ticket assignment, auto- rescheduling into RadiumAi, a tool to monitor RPA process across platforms.</li>
+<li>Increased memory utilization and decreased training runtime through data and model parallelization techniques, enhancing the efficiency of machine learning workflows.</li>
+<li>Reduced payment term from three days to one by implementing OCR to automate invoice processing, therby accelerating the payment cycle and improving supply chain efficiency.</li>
+<li>Eliminated dependency on users and ensured consistency by automating data collection, manipulation and report generation.</li>
 </ul>
 <p><strong>Data Engineer</strong><br>
 <strong>Tata Consultancy Services</strong>, Bengaluru, India<br>
@@ -182,10 +184,10 @@ Jun 2018 - Jul 2019</p>
 </h2>
 <p><strong><a href="https://github.com/P101010/Brain-Tumor-Classification"  class="external-link" target="_blank" rel="noopener">Brain Tumor Classification – Deployment ready project</a></strong></p>
 <ul>
-<li>Deployed a brain tumor classifier on GKE, based on the latest Docker image in the artifact registry which was pushed by GitHub Actions thereby achieving CI/CD</li>
-<li>Used <strong>FastAPI</strong> for backend endpoint communication and <strong>Streamlit</strong> for the frontend application.</li>
-<li>Implemented data versioning using <strong>DVC</strong>, model versioning and tracking using <strong>MLFlow</strong>, and automated model training and retraining pipelines using <strong>Airflow DAGs</strong>.</li>
-<li>Monitored model for confidence, prediction distribution and data for data drift and skew to increase lifecycle of model</li>
+<li>Developed a brain-tumor classifier using CNN and managed versioning and artifacts of model using MLFlow.</li>
+<li>Automated training and retraining of model using Airflow DAG’s based on feedback received.</li>
+<li>Deployed a scalable application developed using Streamlit leveraging Restful API endpoints on Kubernetes, based on the latest Docker image in the artifact registry, pushed by GitHub Actions on change thereby achieving CI/CD.</li>
+<li>Monitored model for confidence and prediction distribution, data for drift and skew to increase lifecycle of model.</li>
 </ul>
 <p><strong><a href="https://github.com/P101010/Body-Composition-Scanner"  class="external-link" target="_blank" rel="noopener">Body Composition Scanner</a></strong></p>
 <ul>
@@ -198,10 +200,10 @@ Jun 2018 - Jul 2019</p>
 <li>Developed a KNN model, improved its accuracy from 44% to 89% by feature engineering, basis expansion and hyperparameter tuning</li>
 <li>Applied various ML tecniques and settled on distance based KNN moedel which when tuned to seven neighbours achieved an accuracy of 86%.</li>
 </ul>
-<p><strong><a href="https://github.com/P101010/Room_Occupancy_Prediction"  class="external-link" target="_blank" rel="noopener">Room Occupancy Estimation</a></strong></p>
+<p><strong><a href="https://github.com/P101010/Classical-Machine-learning-Algorithms"  class="external-link" target="_blank" rel="noopener">Classical Machine Learning Algorithms</a></strong></p>
 <ul>
-<li>Engineered models for a multi-class classification problem to predict the number of room occupants by building algorithms like Logistic Regression, Gaussian Naïve Bayes, and SVM using NumPy, Pandas and SciPy Optimize.</li>
-<li>Improved model performance by detrending time series, batch processing to reduce temporal noise, basis expansion to ensure parameters follow normal distribution.</li>
+<li>Implemented classical machine learning algorithms (Linear Regression, Logistic Regression, and SVM) from scratch using Python, NumPy, and SciPy, demonstrating strong foundational understanding of model optimization, regularization, gradient descent.</li>
+<li>Developed comprehensive evaluation metrics (Accuracy, RMSE, SSE, Precision, Recall) to assess model performance, improving the interpretability and robustness of predictions.</li>
 </ul>
 <p><strong><a href="https://github.com/P101010/Formula-1-Drivers-Championship-Dashboard-and-Analysis"  class="external-link" target="_blank" rel="noopener">Formula1 – Battle for the Drivers’ Championship Analysis and Dashboard</a></strong></p>
 <ul>
@@ -216,8 +218,7 @@ Jun 2018 - Jul 2019</p>
 </ul>
 <p><strong><a href="https://github.com/P101010/Predicting-the-load-on-a-bus"  class="external-link" target="_blank" rel="noopener">MBTA – Machine learning model for predicting the load on bus</a></strong></p>
 <ul>
-<li>Trained supervised machine learning models like <strong>Linear Regression</strong>, <strong>KNN</strong>, <strong>Random Forest</strong>, and <strong>Decision Trees</strong> using <strong>Scikit-learn</strong> on MBTA data to predict bus load.</li>
-<li>Identified <strong>Random Forest</strong> as the most accurate model with 82% accuracy, improving to 84.8% with further tuning of hyperparameters.</li>
+<li>Improved user satisfaction by reducing load on bus by 30% with scheduling strategies derived based on a random forest model developed with MBTA Data Science team which achieved an accuracy of 84.8%.</li>
 </ul>
 <p><strong>European Football/Soccer Database Management System</strong></p>
 <ul>
