--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -13,27 +13,18 @@
 
 
 <meta name="author" content="Praneith Ranganath">
-<meta name="description" content="Work Experience Link to heading Data Analyst
-FHI 360, Washington, DC
-Jun 2023 – Nov 2023
-Reduced patient dropout rates from 72% to 51% by identifying patients at high risk of treatment interruptions with a KNN model built with the HIV team achieving an accuracy of 65%. Developed dashboards for analysis by consolidating data from multiple sources into a data warehouse, driving cost-effective decisions and enhancing scope of project viability studies.">
+<meta name="description" content="Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.com Work Experience Link to heading Data Analyst">
 <meta name="keywords" content="blog,student,northeastern,personal">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="praneith ranganath">
-  <meta name="twitter:description" content="Work Experience Link to heading Data Analyst
-FHI 360, Washington, DC
-Jun 2023 – Nov 2023
-Reduced patient dropout rates from 72% to 51% by identifying patients at high risk of treatment interruptions with a KNN model built with the HIV team achieving an accuracy of 65%. Developed dashboards for analysis by consolidating data from multiple sources into a data warehouse, driving cost-effective decisions and enhancing scope of project viability studies.">
+  <meta name="twitter:description" content="Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.com Work Experience Link to heading Data Analyst">
 
 <meta property="og:url" content="http://www.praneith.com/resume/">
   <meta property="og:site_name" content="praneith ranganath">
   <meta property="og:title" content="praneith ranganath">
-  <meta property="og:description" content="Work Experience Link to heading Data Analyst
-FHI 360, Washington, DC
-Jun 2023 – Nov 2023
-Reduced patient dropout rates from 72% to 51% by identifying patients at high risk of treatment interruptions with a KNN model built with the HIV team achieving an accuracy of 65%. Developed dashboards for analysis by consolidating data from multiple sources into a data warehouse, driving cost-effective decisions and enhancing scope of project viability studies.">
+  <meta property="og:description" content="Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.com Work Experience Link to heading Data Analyst">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
 
@@ -142,7 +133,23 @@ Reduced patient dropout rates from 72% to 51% by identifying patients at high ri
       </h1>
     </header>
 
-    <h2 id="work-experience">
+    <h2 id="skills">
+  Skills
+  <a class="heading-link" href="#skills">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
+<ul>
+<li><strong>Frameworks:</strong> Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy</li>
+<li><strong>Databases and Datawarehouse Tools:</strong> MySQL, PostgreSQL, MongoDB, Snowflake, Talend</li>
+<li><strong>Cloud and Visualization Tools:</strong> GCP, AWS, Tableau, Power BI</li>
+<li><strong>MLOps and CI/CD:</strong> Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions</li>
+<li><strong>Programming Languages:</strong> Python, Java, C++, C#</li>
+<li><strong>Automation Tools:</strong> Automation Anywhere, Power Automate, UI Path, RulAI, VB Script</li>
+<li><strong>Project Management Tools:</strong> Jeera, Workzone, Monday.com</li>
+</ul>
+<h2 id="work-experience">
   Work Experience
   <a class="heading-link" href="#work-experience">
     <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
@@ -153,17 +160,18 @@ Reduced patient dropout rates from 72% to 51% by identifying patients at high ri
 <strong>FHI 360</strong>, Washington, DC<br>
 Jun 2023 – Nov 2023</p>
 <ul>
-<li>Reduced patient dropout rates from 72% to 51% by identifying patients at high risk of treatment interruptions with a KNN
-model built with the HIV team achieving an accuracy of 65%.</li>
-<li>Developed dashboards for analysis by consolidating data from multiple sources into a data warehouse, driving cost-effective decisions and enhancing scope of project viability studies.</li>
+<li>Reduced patient dropout rates from 72% to 51% by identifying key parameters that corelated directly to patients at high risk of treatment interruptions and implemented Gradient Boosted Trees on them achieving an accuracy of 65%.</li>
+<li>Deployed a Python RAG framework, allowing users to query in natural language and retrieve answers from relevant document embeddings stored in a vector database reducing time spent on searching documents for information.</li>
+<li>Developed dashboards on market trends and competitors using Power Bi to enhance scope of studies for project viability ensuring cost-effective decisions achieved by transforming data from various public sources into a warehouse on Azure.</li>
 <li>Engineered a Python framework to extract Congressional Budget Justification data, providing a strategic forecast of project outlook and funding allocations for upcoming fiscal years in specific regions and countries through dashboards.</li>
 </ul>
 <p><strong>Senior Automation Engineer</strong><br>
 <strong>Acronotics</strong>, Bengaluru, India<br>
 Jul 2019 - Sep 2022</p>
 <ul>
-<li>Cut recruitment time by 40% through shortlisting candidates using Gaussian Process Regression based on partner data.</li>
-<li>Improved user experience by leading a team of engineers as the Solution architect and augmenting features like auto-ticket assignment, auto- rescheduling into RadiumAi, a tool to monitor RPA process across platforms.</li>
+<li>Cut recruitment time by 65% by developing a python framework to scrape candidate info from LinkedIn and further reduced</li>
+<li>As the solution architect improved user experience by designing dashboards to monitor bot performance and augmented features like auto-ticket assignment, auto-rescheduling into RadiumAi, a product to maintain RPA process across platforms.</li>
+<li>Achieved a 12x increase in speed and a 45% boost in accuracy in retrieving documents by developing a hybrid approach that integrates TF-IDF sparse and dense attention-based embeddings, delivering optimized relevance and performance.</li>
 <li>Increased memory utilization and decreased training runtime through data and model parallelization techniques, enhancing the efficiency of machine learning workflows.</li>
 <li>Reduced payment term from three days to one by implementing OCR to automate invoice processing, therby accelerating the payment cycle and improving supply chain efficiency.</li>
 <li>Eliminated dependency on users and ensured consistency by automating data collection, manipulation and report generation.</li>
@@ -173,58 +181,15 @@ Jul 2019 - Sep 2022</p>
 Jun 2018 - Jul 2019</p>
 <ul>
 <li>Streamlined data flow for analysis by designing and deploying pipelines that ingest data from AWS S3 buckets into Snowflake and automate transformations through Streams and Tasks, resulting in consistent and efficient data processing.</li>
-<li>Deployed scripts to automate data extraction, transformation, and visualization from over hundred data sources, ensuring real-time updates and enhancing data accessibility.</li>
+<li>Deployed scripts to automate data extraction, transformation, and visualization from over hundred data sources, ensuring real-time updates and enhancing data accessibility for upstream tasks.</li>
 </ul>
-<h2 id="projects">
-  Projects
-  <a class="heading-link" href="#projects">
+<h3 id="projectsprojects">
+  <a href="../projects/" >Projects</a>
+  <a class="heading-link" href="#projectsprojects">
     <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
     <span class="sr-only">Link to heading</span>
   </a>
-</h2>
-<p><strong><a href="https://github.com/P101010/Brain-Tumor-Classification"  class="external-link" target="_blank" rel="noopener">Brain Tumor Classification – Deployment ready project</a></strong></p>
-<ul>
-<li>Developed a brain-tumor classifier using CNN and managed versioning and artifacts of model using MLFlow.</li>
-<li>Automated training and retraining of model using Airflow DAG’s based on feedback received.</li>
-<li>Deployed a scalable application developed using Streamlit leveraging Restful API endpoints on Kubernetes, based on the latest Docker image in the artifact registry, pushed by GitHub Actions on change thereby achieving CI/CD.</li>
-<li>Monitored model for confidence and prediction distribution, data for drift and skew to increase lifecycle of model.</li>
-</ul>
-<p><strong><a href="https://github.com/P101010/Body-Composition-Scanner"  class="external-link" target="_blank" rel="noopener">Body Composition Scanner</a></strong></p>
-<ul>
-<li>A tool to calculate body composition metrics using images, inspired by the research paper on Human proportions by Prof. John Verzani which showcased the linear relationship between body measurements such as neck to fat composition.</li>
-<li>Predicted neck and wrist measurements from images using a Resnet model and used a linear model to measure body composition metrics</li>
-</ul>
-<p><strong><a href="https://medium.com/@praneithranganath10/beyond-the-kick-a-data-driven-decomposition-of-penalties-b42bfc811b03"  class="external-link" target="_blank" rel="noopener">Penalty Analysis and Predicion</a></strong></p>
-<ul>
-<li>Created a new dataset with paramters such as isFansSide and established thaere exists a complex realtionship between them and direction of penalty for one test player Harry Kane through EDA.</li>
-<li>Developed a KNN model, improved its accuracy from 44% to 89% by feature engineering, basis expansion and hyperparameter tuning</li>
-<li>Applied various ML tecniques and settled on distance based KNN moedel which when tuned to seven neighbours achieved an accuracy of 86%.</li>
-</ul>
-<p><strong><a href="https://github.com/P101010/Classical-Machine-learning-Algorithms"  class="external-link" target="_blank" rel="noopener">Classical Machine Learning Algorithms</a></strong></p>
-<ul>
-<li>Implemented classical machine learning algorithms (Linear Regression, Logistic Regression, and SVM) from scratch using Python, NumPy, and SciPy, demonstrating strong foundational understanding of model optimization, regularization, gradient descent.</li>
-<li>Developed comprehensive evaluation metrics (Accuracy, RMSE, SSE, Precision, Recall) to assess model performance, improving the interpretability and robustness of predictions.</li>
-</ul>
-<p><strong><a href="https://github.com/P101010/Formula-1-Drivers-Championship-Dashboard-and-Analysis"  class="external-link" target="_blank" rel="noopener">Formula1 – Battle for the Drivers’ Championship Analysis and Dashboard</a></strong></p>
-<ul>
-<li>Extracted and integrated data from various sources and APIs, utilized <strong>Python</strong> for data wrangling, and created a comprehensive dashboard displaying the 2021 season insights using <strong>Tableau</strong>.</li>
-<li>Used <strong>Exploratory Data Analysis</strong> techniques to uncover factors influencing the 2021 championship battle.</li>
-</ul>
-<p><strong>Health Centre Database and Datawarehouse for Analysis</strong></p>
-<ul>
-<li>Designed and modeled a database to handle various aspects involved in a healthcare center.</li>
-<li>Created a multidimensional model with several facts such as Consultation, Tests Conducted, and Operations performed to analyze health center metrics and identify potential hazards.</li>
-<li>Implemented OLTP and OLAP databases using <strong>PostgreSQL</strong> and used <strong>Talend Jobs</strong> for ETL operations.</li>
-</ul>
-<p><strong><a href="https://github.com/P101010/Predicting-the-load-on-a-bus"  class="external-link" target="_blank" rel="noopener">MBTA – Machine learning model for predicting the load on bus</a></strong></p>
-<ul>
-<li>Improved user satisfaction by reducing load on bus by 30% with scheduling strategies derived based on a random forest model developed with MBTA Data Science team which achieved an accuracy of 84.8%.</li>
-</ul>
-<p><strong>European Football/Soccer Database Management System</strong></p>
-<ul>
-<li>Architected and implemented a scalable and robust database system for the European football/soccer league using <strong>MySQL</strong> and <strong>MongoDB</strong>.</li>
-<li>Integrated <strong>MySQL database</strong> with <strong>Python</strong> using <strong>SQLAlchemy</strong> for data analysis.</li>
-</ul>
+</h3>
 <h2 id="education">
   Education
   <a class="heading-link" href="#education">
@@ -248,42 +213,6 @@ GPA: 3.9/4.0</p>
 Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka<br>
 Graduation: June 2018
 GPA: 3.46/4.0</p>
-<p><strong>Relevant Coursework:</strong></p>
-<ul>
-<li>Design and Analysis of Algorithms</li>
-<li>Object-Oriented Design</li>
-<li>Reliability, Queueing Theory and Probability</li>
-<li>Cloud Computing</li>
-</ul>
-<h2 id="skills">
-  Skills
-  <a class="heading-link" href="#skills">
-    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h2>
-<ul>
-<li><strong>Frameworks:</strong> Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy</li>
-<li><strong>Databases and Datawarehouse Tools:</strong> MySQL, PostgreSQL, MongoDB, Snowflake, Talend</li>
-<li><strong>Cloud and Visualization Tools:</strong> GCP, AWS, Tableau, Power BI</li>
-<li><strong>MLOps and CI/CD:</strong> Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions</li>
-<li><strong>Programming Languages:</strong> Python, Java, C++, C#</li>
-<li><strong>Automation Tools:</strong> Automation Anywhere, Power Automate, UI Path, RulAI, VB Script</li>
-<li><strong>Project Management Tools:</strong> Jeera, Workzone, Monday.com</li>
-</ul>
-<h2 id="contact-information">
-  Contact Information
-  <a class="heading-link" href="#contact-information">
-    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h2>
-<ul>
-<li>Email: <a href="mailto:ranganth.p@northeastern.edu" >ranganth.p@northeastern.edu</a></li>
-<li>Phone: (857)-413-0507</li>
-<li>LinkedIn: <a href="https://www.linkedin.com/in/praneithranganath10/"  class="external-link" target="_blank" rel="noopener">Praneith Ranganath</a></li>
-<li>GitHub: <a href="https://github.com/P101010"  class="external-link" target="_blank" rel="noopener">P101010</a></li>
-</ul>
 
   </article>
 </section>
