--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -13,18 +13,39 @@
 
 
 <meta name="author" content="Praneith Ranganath">
-<meta name="description" content="Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.com Work Experience Link to heading Data Analyst">
+<meta name="description" content="Education Link to heading Masters in Data Analytics
+Northeastern University, Boston, MA
+Expected Graduation: December 2024
+GPA: 3.9/4.0
+Bachelor of Science in Information Science
+Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka
+Graduation: June 2018 GPA: 3.46/4.0
+Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy, Langchain Architectures: RNN, LSTM, GRU, Seq2Seq, Transofrmers, Autoencoder, VAE, GAN, Diffusion models Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend, ChromaDB, DataStax Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.">
 <meta name="keywords" content="blog,student,northeastern,personal">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="praneith ranganath">
-  <meta name="twitter:description" content="Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.com Work Experience Link to heading Data Analyst">
+  <meta name="twitter:description" content="Education Link to heading Masters in Data Analytics
+Northeastern University, Boston, MA
+Expected Graduation: December 2024
+GPA: 3.9/4.0
+Bachelor of Science in Information Science
+Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka
+Graduation: June 2018 GPA: 3.46/4.0
+Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy, Langchain Architectures: RNN, LSTM, GRU, Seq2Seq, Transofrmers, Autoencoder, VAE, GAN, Diffusion models Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend, ChromaDB, DataStax Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.">
 
 <meta property="og:url" content="http://www.praneith.com/resume/">
   <meta property="og:site_name" content="praneith ranganath">
   <meta property="og:title" content="praneith ranganath">
-  <meta property="og:description" content="Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.com Work Experience Link to heading Data Analyst">
+  <meta property="og:description" content="Education Link to heading Masters in Data Analytics
+Northeastern University, Boston, MA
+Expected Graduation: December 2024
+GPA: 3.9/4.0
+Bachelor of Science in Information Science
+Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka
+Graduation: June 2018 GPA: 3.46/4.0
+Skills Link to heading Frameworks: Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy, Langchain Architectures: RNN, LSTM, GRU, Seq2Seq, Transofrmers, Autoencoder, VAE, GAN, Diffusion models Databases and Datawarehouse Tools: MySQL, PostgreSQL, MongoDB, Snowflake, Talend, ChromaDB, DataStax Cloud and Visualization Tools: GCP, AWS, Tableau, Power BI MLOps and CI/CD: Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions Programming Languages: Python, Java, C&#43;&#43;, C# Automation Tools: Automation Anywhere, Power Automate, UI Path, RulAI, VB Script Project Management Tools: Jeera, Workzone, Monday.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
 
@@ -133,7 +154,22 @@
       </h1>
     </header>
 
-    <h2 id="skills">
+    <h2 id="education">
+  Education
+  <a class="heading-link" href="#education">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
+<p><strong>Masters in Data Analytics</strong><br>
+Northeastern University, Boston, MA<br>
+Expected Graduation: December 2024<br>
+GPA: 3.9/4.0</p>
+<p><strong>Bachelor of Science in Information Science</strong><br>
+Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka<br>
+Graduation: June 2018
+GPA: 3.46/4.0</p>
+<h2 id="skills">
   Skills
   <a class="heading-link" href="#skills">
     <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
@@ -141,8 +177,9 @@
   </a>
 </h2>
 <ul>
-<li><strong>Frameworks:</strong> Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy</li>
-<li><strong>Databases and Datawarehouse Tools:</strong> MySQL, PostgreSQL, MongoDB, Snowflake, Talend</li>
+<li><strong>Frameworks:</strong> Pandas, NumPy, TensorFlow, PyTorch, Scikit-learn, BeautifulSoup, Scrapy, Langchain</li>
+<li><strong>Architectures:</strong> RNN, LSTM, GRU, Seq2Seq, Transofrmers, Autoencoder, VAE, GAN, Diffusion models</li>
+<li><strong>Databases and Datawarehouse Tools:</strong> MySQL, PostgreSQL, MongoDB, Snowflake, Talend, ChromaDB, DataStax</li>
 <li><strong>Cloud and Visualization Tools:</strong> GCP, AWS, Tableau, Power BI</li>
 <li><strong>MLOps and CI/CD:</strong> Airflow, MLflow, TFX, DVC, Docker, Kubernetes, GitHub Actions</li>
 <li><strong>Programming Languages:</strong> Python, Java, C++, C#</li>
@@ -183,36 +220,13 @@ Jun 2018 - Jul 2019</p>
 <li>Streamlined data flow for analysis by designing and deploying pipelines that ingest data from AWS S3 buckets into Snowflake and automate transformations through Streams and Tasks, resulting in consistent and efficient data processing.</li>
 <li>Deployed scripts to automate data extraction, transformation, and visualization from over hundred data sources, ensuring real-time updates and enhancing data accessibility for upstream tasks.</li>
 </ul>
-<h3 id="projectsprojects">
+<h2 id="projectsprojects">
   <a href="../projects/" >Projects</a>
   <a class="heading-link" href="#projectsprojects">
     <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
     <span class="sr-only">Link to heading</span>
   </a>
-</h3>
-<h2 id="education">
-  Education
-  <a class="heading-link" href="#education">
-    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
 </h2>
-<p><strong>Masters in Data Analytics</strong><br>
-Northeastern University, Boston, MA<br>
-Expected Graduation: December 2024<br>
-GPA: 3.9/4.0</p>
-<p><strong>Relevant Coursework:</strong></p>
-<ul>
-<li>Machine learning</li>
-<li>Machine Learning Operations (MLOps)</li>
-<li>Natural Language Processing</li>
-<li>Data Mining</li>
-<li>Datawarehouse and Business Intelligence</li>
-</ul>
-<p><strong>Bachelor of Science in Information Science</strong><br>
-Dr Ambedkar Intitute of Technology, Bengaluru, Karnataka<br>
-Graduation: June 2018
-GPA: 3.46/4.0</p>
 
   </article>
 </section>
