Update 2 dec 7th

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -186,6 +186,13 @@ GPA: 3.46/4.0</p>
 <li><strong>Automation Tools:</strong> Automation Anywhere, Power Automate, UI Path, RulAI, VB Script</li>
 <li><strong>Project Management Tools:</strong> Jeera, Workzone, Monday.com</li>
 </ul>
+<h2 id="projectsprojects">
+  <a href="../projects/" >Projects</a>
+  <a class="heading-link" href="#projectsprojects">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <h2 id="work-experience">
   Work Experience
   <a class="heading-link" href="#work-experience">
@@ -208,7 +215,8 @@ Jul 2019 - Sep 2022</p>
 <ul>
 <li>Cut recruitment time by 65% by developing a python framework to scrape candidate info from LinkedIn and further reduced</li>
 <li>As the solution architect improved user experience by designing dashboards to monitor bot performance and augmented features like auto-ticket assignment, auto-rescheduling into RadiumAi, a product to maintain RPA process across platforms.</li>
-<li>Achieved a 12x increase in speed and a 45% boost in accuracy in retrieving documents by developing a hybrid approach that integrates TF-IDF sparse and dense attention-based embeddings, delivering optimized relevance and performance.</li>
+<li>Reduced helpline wait time by 70% by building a chatbot that used few shot examples &amp; document retrieval to solve queries.</li>
+<li>Enhanced chatbots ability to retrieve relevant info by using a hybrid approach combining TF-IDF sparse embeddings and attention-based dense embeddings, achieving a 12x speed improvement and a 65% increase in accuracy.</li>
 <li>Increased memory utilization and decreased training runtime through data and model parallelization techniques, enhancing the efficiency of machine learning workflows.</li>
 <li>Reduced payment term from three days to one by implementing OCR to automate invoice processing, therby accelerating the payment cycle and improving supply chain efficiency.</li>
 <li>Eliminated dependency on users and ensured consistency by automating data collection, manipulation and report generation.</li>
@@ -220,13 +228,6 @@ Jun 2018 - Jul 2019</p>
 <li>Streamlined data flow for analysis by designing and deploying pipelines that ingest data from AWS S3 buckets into Snowflake and automate transformations through Streams and Tasks, resulting in consistent and efficient data processing.</li>
 <li>Deployed scripts to automate data extraction, transformation, and visualization from over hundred data sources, ensuring real-time updates and enhancing data accessibility for upstream tasks.</li>
 </ul>
-<h2 id="projectsprojects">
-  <a href="../projects/" >Projects</a>
-  <a class="heading-link" href="#projectsprojects">
-    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h2>
 
   </article>
 </section>
