--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
 
     <h1>Praneith Ranganath</h1>
 
-<h2>Masters in Data Analytics<br>Northeastern University<br></h2>
+<h2>Masters in Data Analytics<br>Northeastern University<br>Microsoft Azure AI Engineer Certified<br></h2>
 
 
 
